Revision history for Date-Event

{{$NEXT}}
    - New API 2:
      + converted to a role
      + requires a method to provide a hash of hashes of
        unique objects derived from this role
      + requires a method to merge hashes of unique objects
      

0.0.7  2024-01-31T08:39:28-06:00
    - Expand README

0.0.6  2024-01-30T20:10:01-06:00
    - Add :uid to use as a set ID

0.0.5  2024-01-30T17:18:51-06:00

    - Add a method for a user to distinguish between different Event sets
    - Add back old method 'is-calc' just in case someone was using it
    - Add a real test of the functionality in test 2
    - Improve docs
    - Add new attributes for use with new features of 'Date::Utils'

0.0.4  2024-01-29T15:45:54-06:00
    - Change the Windows test to use zef instead of the broken Windows
        version of prove6
    - Add tests
    - Rename method 'is-calc', make it require a Bool value
      + test for a Bool entry, die on failure
    - Update copyright year in README

0.0.3  2023-03-18T06:11:35-05:00
    - Add a Boolean attribute, '$is-calculated',  indicating
      whether the event's date is caclulated or fixed
      (default: False). Add a method, 'is-calc', for the user
      to change the value of that attribute.

0.0.2  2023-03-13T05:21:23-05:00
    - Add tags

0.0.1  2023-03-10T20:19:53-06:00
    - Initial version